force-app/main/default/objects/SPEN_PostingParameter__c/SPEN_PostingParameter__c.object-meta.xml
<CustomObject>
    <description>This object is created to capture posting parameter information and send it for SAP sync</description>
    <label>Posting Parameter</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Posting Parameter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Posting Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>