force-app/main/default/objects/SPEN_PostingParameter__c/fields/SPEN_AmountReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AmountReference__c</fullName>
    <label>Amount Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly Amount</fullName>
            </value>
            <value>
                <fullName>Monthly Amount</fullName>
            </value>
            <value>
                <fullName>Daily Amount</fullName>
            </value>
            <value>
                <fullName>Cyclical Amount</fullName>
            </value>
            <value>
                <fullName>Hourly Amount</fullName>
            </value>
            <value>
                <fullName>Amount Per Minute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>