force-app/main/default/objects/SPEN_PostingParameter__c/fields/SPEN_Frequency__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Frequency__c</fullName>
    <label>Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>