force-app/main/default/objects/SPEN_PostingParameter__c/fields/SPEN_StartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StartDate__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>