force-app/main/default/objects/SPEN_PostingParameter__c/fields/SPEN_TaxType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TaxType__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FT Fleet VAT Shared Use (20%)</fullName>
            </value>
            <value>
                <fullName>S9 Standard Rated VAT (20%)</fullName>
            </value>
            <value>
                <fullName>SE Exempt (0%)</fullName>
            </value>
            <value>
                <fullName>SW Outside of the Scope (0%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>